[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scripts/Games/push-spring_game.gd" type="Script" id=1]
[ext_resource path="res://Textures/Wall.png" type="Texture" id=2]
[ext_resource path="res://Textures/Wall_normal.png" type="Texture" id=3]
[ext_resource path="res://Textures/Floor_Wood.png" type="Texture" id=4]
[ext_resource path="res://Textures/Floor_Wood_spec.png" type="Texture" id=5]
[ext_resource path="res://Textures/Floor_Wood_normal.png" type="Texture" id=6]
[ext_resource path="res://Textures/Brushed_Metal.jpg" type="Texture" id=7]
[ext_resource path="res://Meshes/Spring-rigged.obj" type="ArrayMesh" id=8]
[ext_resource path="res://Scripts/spring.gd" type="Script" id=9]
[ext_resource path="res://Meshes/toon_hand_point.obj" type="ArrayMesh" id=10]
[ext_resource path="res://Meshes/arrow.obj" type="ArrayMesh" id=11]
[ext_resource path="res://Scenes/GUI.tscn" type="PackedScene" id=12]
[ext_resource path="res://Fonts/LuckiestGuyGame.tres" type="DynamicFont" id=13]
[ext_resource path="res://Fonts/LuckiestGuy.tres" type="DynamicFont" id=14]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.634949, 0.745013, 0.804688, 1 )
albedo_texture = ExtResource( 2 )
metallic_specular = 0.0
roughness = 0.0
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=2]
material = SubResource( 1 )
size = Vector2( 30, 30 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.828125, 0.740202, 0.669617, 1 )
albedo_texture = ExtResource( 4 )
metallic_specular = 0.0
metallic_texture = ExtResource( 5 )
roughness = 0.0
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 6 )

[sub_resource type="QuadMesh" id=4]
material = SubResource( 3 )
size = Vector2( 30, 30 )

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 7 )
metallic = 0.5
roughness = 0.0

[sub_resource type="CylinderMesh" id=6]
material = SubResource( 5 )
height = 0.3
radial_segments = 16

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.824219, 0.466742, 0.151321, 1 )
metallic_specular = 0.0
roughness = 0.0

[sub_resource type="SpatialMaterial" id=8]
albedo_texture = ExtResource( 7 )
metallic = 0.5
roughness = 0.5

[sub_resource type="CylinderMesh" id=9]
material = SubResource( 8 )
height = 0.3
radial_segments = 16

[sub_resource type="CylinderShape" id=10]
height = 0.261134

[sub_resource type="SpatialMaterial" id=11]
flags_transparent = true
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true
albedo_color = Color( 1, 0, 0, 0.705882 )
roughness = 0.0
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 0.5
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CylinderMesh" id=12]
material = SubResource( 11 )
height = 0.3
radial_segments = 16

[sub_resource type="CylinderShape" id=13]
radius = 1.07912
height = 0.1

[sub_resource type="SpatialMaterial" id=14]
albedo_color = Color( 0.47451, 1, 0, 1 )
roughness = 0.0
emission_enabled = true
emission = Color( 0.47451, 1, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=15]
albedo_color = Color( 0.47451, 1, 0, 1 )
roughness = 0.0
emission_enabled = true
emission = Color( 0.476562, 1, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="StyleBoxFlat" id=16]

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.225497, 9.62844 )
fov = 50.0

[node name="Ceiling" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 3.59768, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Wall" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.792529, -5 )
mesh = SubResource( 4 )
material/0 = null

[node name="SpringBase" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.45647, 0 )
mesh = SubResource( 6 )
material/0 = null

[node name="Spring" type="MeshInstance" parent="SpringBase"]
transform = Transform( 0.85, -3.31002e-07, -3.31002e-07, -3.31002e-07, -0.85, -9.48677e-20, -3.31002e-07, 1.28897e-13, -0.85, 0, -0.0218852, 0 )
mesh = ExtResource( 8 )
material/0 = null
script = ExtResource( 9 )
connector_1 = NodePath("..")
connector_2 = NodePath("../Effector")

[node name="Effector" type="RigidBody" parent="SpringBase"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.45647, 0 )
gravity_scale = 0.0

[node name="Hand" type="MeshInstance" parent="SpringBase/Effector"]
transform = Transform( 0.3, 0, 0, 0, -4.88762e-08, -0.3, 0, 0.3, -4.88762e-08, 0.879908, -2.79586, -0.429984 )
mesh = ExtResource( 10 )
material/0 = SubResource( 7 )

[node name="Handle" type="MeshInstance" parent="SpringBase/Effector"]
mesh = SubResource( 9 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="SpringBase/Effector"]
shape = SubResource( 10 )

[node name="Target" type="Area" parent="SpringBase"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.72824, 0 )
input_ray_pickable = false

[node name="Mesh" type="MeshInstance" parent="SpringBase/Target"]
transform = Transform( 1.1, 0, 0, 0, 0.5, 0, 0, 0, 1.1, 0, 0, 0 )
mesh = SubResource( 12 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="SpringBase/Target"]
shape = SubResource( 13 )

[node name="Arrow" type="Spatial" parent="SpringBase"]
visible = false

[node name="Arrow1" type="MeshInstance" parent="SpringBase/Arrow"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 1, -3.5, -3.5, 0 )
mesh = ExtResource( 11 )
material/0 = SubResource( 14 )

[node name="Arrow2" type="MeshInstance" parent="SpringBase/Arrow"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 1, 3.5, -3.5, 0 )
mesh = ExtResource( 11 )
material/0 = SubResource( 15 )

[node name="SpotLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.828143, 0.560517, 0, -0.560517, 0.828143, 0, -4.4794, 7.71034 )
light_energy = 1.5
omni_range = 31.0665

[node name="GUI" parent="." instance=ExtResource( 12 )]

[node name="ForcePanel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.498039 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 555.0
margin_top = -140.0
margin_right = -555.0
margin_bottom = -20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 16 )

[node name="VariableLabel" type="Label" parent="ForcePanel"]
margin_left = 12.0
margin_top = 10.0
margin_right = 162.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Force"
align = 1
valign = 1

[node name="MeasureDisplay" type="LineEdit" parent="ForcePanel"]
margin_left = 20.0
margin_top = 60.0
margin_right = 150.0
margin_bottom = 111.0
focus_mode = 0
mouse_default_cursor_shape = 0
custom_fonts/font = ExtResource( 14 )
text = "+00.0N"
align = 1
focus_mode = 0
[connection signal="body_entered" from="SpringBase/Target" to="." method="_on_Target_body_entered"]
[connection signal="body_exited" from="SpringBase/Target" to="." method="_on_Target_body_exited"]
